Fix scrolling issues on firefox, add script for grouping images with like aspect ratio, work on new galleries.

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -18,6 +18,10 @@
     display: none;
 }
 
+body {
+    overflow:hidden;
+}
+
 /*
 brown: #C49365
 gray:   #2C403D
