--- a/src/css/pages/gallery-page.css
+++ b/src/css/pages/gallery-page.css
@@ -7,7 +7,7 @@ gray:   #2C403D
 
 .gallery-page {
     position: relative;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     padding-left: 25px;
     padding-right: 25px;
